<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/action_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/anim_slideshow"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/fmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_my_serves"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="40sp"
                android:textStyle="italic">
            </TextView>

            <TextView
                android:id="@+id/bestfy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_find_the_best_for_you"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textColor="@android:color/background_dark"
                android:textSize="27sp"
                android:textStyle="bold">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/sing"
                android:text="@string/sing_up">

            </Button>

            <Button
                android:id="@+id/log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/log"
                android:text="@string/log_in">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:text="@string/continue_as_guest"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>





